...
    <string name="label_fourth_freq_band">1800 - 7000 Hz</string>
    <string name="label_fifth_freq_band">7000 - 20000 Hz</string>
    <string name="noise_filter">Noise Filter</string>
    <string name="speech_focus">Speech Focus</string>
    <string name="normal">Normal</string>
    <string name="title_permissions_dialog">Permissions Required</string>
    <string name="negative_button_dialog">CANCEL</string>
    <string name="positive_button_dialog">OK</string>
    <string name="dialog_msg_perms_main">Storage and Microphone Permissions are Required for this Application</string>
    <string name="toast_msg_permissions">Go to settings and enable permissions</string>
    <string name="dialog_msg_permission_storage">Storage permission is required for the media player. Go to settings and enable permissions!</string>
    <string name="dialog_msg_perms_record">Record audio permissions are required for the hearing aid. Go to settings and enable permissions!</string>
    <string name="dialog_msg_add_preset">Please Enter a Name for the Equalizer Setting</string>
    <string name="title_dialog_add_preset">Add an Equalizer Setting</string>
    <string name="dialog_msg_preset_rename">Please Enter a New Name for the Equalizer Setting</string>
    <string name="title_dialog_preset_rename">Rename the Equalizer Setting</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="resume_button">Resume</string>
    <string name="cancel_test_button">Cancel Test</string>
    <string name="error_delete_default">Sorry, Default Setting Can Not Be Deleted</string>
    <string name="error_rename_default">Sorry, Default Setting Can Not Be Renamed</string>
    <string name="title_dialog_new_test_result">New Hearing Test Result</string>
    <string name="dialog_msg_new_test_result">Please Enter a Name for the Hearing Test Result</string>
...
